[gd_scene load_steps=8 format=3 uid="uid://cu62y25siuofn"]

[ext_resource type="Texture2D" uid="uid://86t01vadfh2s" path="res://Sprites/Editor/Note.png" id="1_6e8wb"]
[ext_resource type="Script" path="res://Scripts/Systems/ChartEditor/EditorNote.gd" id="1_xgjcl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yjaum"]
size = Vector2(64, 64)

[sub_resource type="Animation" id="Animation_0d1bc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_sangf"]
resource_name = "Spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.125, 1),
"update": 0,
"values": [Vector2(2, 2), Vector2(4, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.233259, 0.0647041),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_2xswu"]
resource_name = "coolEffect"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(0.225313, 1, 0.225313),
"update": 0,
"values": [Vector2(2, 2), Vector2(2.2, 2.2), Vector2(2, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(0.225313, 1, 0.225313),
"update": 0,
"values": [Vector2(0, 0), Vector2(-2.8, -2.8), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.733333, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_thsff"]
_data = {
"RESET": SubResource("Animation_0d1bc"),
"Spawn": SubResource("Animation_sangf"),
"coolEffect": SubResource("Animation_2xswu")
}

[node name="Note" type="Node2D"]
script = ExtResource("1_xgjcl")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-32, -32)
scale = Vector2(2, 2)
texture = ExtResource("1_6e8wb")
centered = false

[node name="Sprite2D2" type="Sprite2D" parent="."]
visibility_layer = 2
z_index = 108
position = Vector2(32, 32)
scale = Vector2(2, 2)
texture = ExtResource("1_6e8wb")

[node name="noteAr" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="noteAr"]
position = Vector2(32, 32)
shape = SubResource("RectangleShape2D_yjaum")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Spawn"
libraries = {
"": SubResource("AnimationLibrary_thsff")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "Spawn"
libraries = {
"": SubResource("AnimationLibrary_thsff")
}

[connection signal="mouse_entered" from="noteAr" to="." method="_on_note_ar_mouse_entered"]
[connection signal="mouse_exited" from="noteAr" to="." method="_on_note_ar_mouse_exited"]
